ecmascript/parser/tests/typescript-errors/tsc/scanner/ecmascript5/scanner10.1.1-8gs/input.ts.stderr
error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
  --> $DIR/tests/typescript-errors/tsc/scanner/ecmascript5/scanner10.1.1-8gs/input.ts:17:5
   |
17 | var public = 1;
   |     ^^^^^^

